--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wp-content/*
 # Ignore everything in the "plugins" directory, except the plugins you
 # specify (see the commented-out examples for hints on how to do this.)
 wp-content/plugins/*
+# !wp-content/plugins/fwdr3dcov/
 # !wp-content/plugins/my-single-file-plugin.php
 # !wp-content/plugins/my-directory-plugin/
 
