--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-# This is a template .gitignore file for git-managed WordPress projects.
-# Fact: you don't want WordPress core files, or your server-specific
-# configuration files etc., in your project's repository. You just don't.
-#
-# Solution: stick this file up your repository root (which it assumes is
-# also the WordPress root directory) and add exceptions for any plugins,
-# themes, and other directories that should be under version control.
-#
-# See the comments below for more info on how to add exceptions for your
-# content. Or see git's documentation for more info on .gitignore files:
-# http://kernel.org/pub/software/scm/git/docs/gitignore.html
-
 # Ignore everything in the root except the "wp-content" directory.
 /*
 !.gitignore
@@ -21,14 +9,5 @@ wp-content/*
 !wp-content/plugins/
 !wp-content/themes/
 
-# Ignore everything in the "plugins" directory, except the plugins you
-# specify (see the commented-out examples for hints on how to do this.)
+# Ignore everything in the "plugins" directory, except the plugins specified (none).
 wp-content/plugins/*
-# !wp-content/plugins/fwdr3dcov/
-# !wp-content/plugins/my-single-file-plugin.php
-# !wp-content/plugins/my-directory-plugin/
-
-# Ignore everything in the "themes" directory, except the themes you
-# specify (see the commented-out example for a hint on how to do this.)
-wp-content/themes/*
-!wp-content/themes/ifpa_custom/
