--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore everything in the root except the "wp-content" directory.
+# Ignore everything in the root except the "wp-content" directory & root readme.
 /*
+!README.md
 !wp-content/
 
 # Ignore everything in the "wp-content" directory, except the "themes" directory.
